<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.exestrial.tools.online.Main"
    android:id="@+id/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stateSpinner"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/info_box_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/state"
                android:textSize="50sp"
                android:textStyle="bold"
                android:text="@string/online"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="125 ms"
                android:id="@+id/ping"
                android:layout_gravity="center"
                android:textSize="30dp" />
        </LinearLayout>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:useDefaultMargins="false"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/net_type"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/netType"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/net_state"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/netState"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:id="@+id/localAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/local_ip"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/localAddress"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:id="@+id/localePingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/local_ping"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/localePing"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/remote_ip"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/remoteAddressTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/remoteAddress"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/remote_ping"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/remotePing"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_margin="@dimen/info_text_margin"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />
    </GridLayout>

</RelativeLayout>
